* Unify PYSON string format
* Forbid all white spaces except space in Char field

Version 5.8.0 - 2020-11-02
* Bug fixes (see mercurial logs for details)
* Remove support for Python 3.5
* Support import of timedelta data
* Add symbol widget
* Add sql_pairing tool
* Add format_datetime to Report
* Allow sharing view searches
* Allow overriding digits in Lang.currency and Report.format_currency
* Add record name in report filename
* Add deletable and writable state from ir.rule to read
* Add language attribute to data tag
* Add e-mail template
* Send e-mail on behalf of user
* Register mixins to generic Report class
* Cache in memory the report template instances
* Support Genshi's MsgDirective in report
* Support PYSON comparison of date and datetime
* Add cron task to clean old queue tasks
* Add option to run cron once
* Add defaults option to route
* Add escape_wildcard in tools
* Add option to ensure emails are sent
* Allow keyword action for all models
* Add sortable_values in tools
* Remove default colors on graph and calendar
* Add model, record and records attributes on Wizard
* Check read access of wizard records
* Add cached_property in tools
* Use custom class to store record data
* Do not write to existing targets on xxx2Many add
* Add configuration check
* Add support for properties to fields.depends
* Allow combining authentication methods together
* Add context to export CSV route

Version 5.6.0 - 2020-05-04
* Bug fixes (see mercurial logs for details)
* Call getter function when accessing Function field on unsaved record
* Add language configuration wizard
* Allow copying attachments and notes to created records
* Add link button on form
* Support explicit delete and remove for saving and on_change xxx2Many
* Add export_data_domain to ModelStorage
* Add route to export CSV data
* Add test on target of relation fields
* Add width and height attributes on calendar view
* Add default database name configuration
* Add retry option to report convert